<resources>
    <string name="app_name">TopQuiz</string>
    <string name="bienvenue_dans_topquiz_quel_est_votre_pr_nom">Bienvenue dans TopQuiz. Quel est votre prénom ?</string>
    <string name="welcome_what_s_your_name">Welcome! What\'s your name?</string>
    <string name="please_type_your_name">Please, type your name</string>
    <string name="let_s_play">Let\'s play</string>
    <string name="answer4">Answer4</string>
    <string name="answer3">Answer3</string>
    <string name="answer2">Answer2</string>
    <string name="answer1">Answer1</string>
    <string name="question">Question?</string>
</resources>
