<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.MainActivity"
    android:gravity="center">

    <TextView
        android:id="@+id/activity_main_welcome_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_what_s_your_name"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/activity_main_txt_input"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:hint="@string/please_type_your_name"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/activity_main_play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_play"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"/>

</LinearLayout>